--- a/html5.html
+++ b/html5.html
@@ -3,10 +3,17 @@
 <head>
   <title>HTML5</title>
 <!--[if lte IE 8]>
-<script src="html5-shiv.js" type="text/javascript"></script>
+  <script src="html5-shiv.js" type="text/javascript"></script>
 <![endif]-->
+  <style type="text/css">
+  section { display: block; padding: 0 1em; border: 3px solid #cfc; }
+  </style>
 </head>
 <body>
-  <p>This is my HTML5 shiv, there are many like it, but this one is mine.</p>
+  <section>
+    <p>This is my HTML5 shiv, there are many like it, but this one is mine.</p>
+  </section>
 </body>
 </html>
+ 
+
