--- a/html5.html
+++ b/html5.html
@@ -6,7 +6,7 @@
   <script src="html5-shiv.js" type="text/javascript"></script>
 <![endif]-->
   <style type="text/css">
-  section { display: block; padding: 0 1em; border: 3px solid #cfc; }
+  section { display: block; padding: 0 1em; border: 3px solid #0c0; background: #cfc; color: #0a0; }
   </style>
 </head>
 <body>
