--- a/html5.html
+++ b/html5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html lang="en-au">
 <head>
-  <title>HTML5</title>
+  <title>HTML5 Shiv Test</title>
 <!--[if lte IE 8]>
   <script src="html5-shiv.js" type="text/javascript"></script>
 <![endif]-->
@@ -10,10 +10,9 @@
   </style>
 </head>
 <body>
+  <h1>HTML5 Shiv Test</h1>
   <section>
     <p>This is my HTML5 shiv, there are many like it, but this one is mine.</p>
   </section>
 </body>
 </html>
- 
-
