Updating IE conditional comment version

--- a/html5.html
+++ b/html5.html
@@ -2,7 +2,7 @@
 <html lang="en-au">
 <head>
   <title>HTML5 Shiv Test</title>
-  <!--[if lte IE 8]><script src="html5-shiv.js" type="text/javascript"></script><![endif]-->
+  <!--[if lt IE 9]><script src="html5-shiv.js" type="text/javascript"></script><![endif]-->
   <style type="text/css">
   section { display: block; padding: 0 1em; border: 3px solid #0c0; background: #cfc; color: #0a0; }
   </style>
